--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
   },
   "dependencies": {
     "@nuxt/typescript-runtime": "^2.0.1",
+    "@nuxtjs/auth-next": "5.0.0-1612791489.a5d8c28",
     "@nuxtjs/axios": "^5.12.5",
     "@nuxtjs/proxy": "^2.1.0",
     "@nuxtjs/pwa": "^3.3.5",
     "core-js": "^3.8.3",
     "nuxt": "^2.14.12",
+    "nuxt-clipboard": "^0.0.2",
     "nuxt-property-decorator": "^2.9.1",
     "vuelidate": "^0.7.6",
     "vuelidate-property-decorators": "^1.0.28"
@@ -34,6 +36,7 @@
     "eslint-plugin-nuxt": "^2.0.0",
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-vue": "^7.5.0",
-    "prettier": "^2.2.1"
+    "prettier": "^2.2.1",
+    "vuex-module-decorators": "^1.0.1"
   }
 }
