Fix env var of caddy container

--- a/docker-compose.sample.yaml
+++ b/docker-compose.sample.yaml
@@ -14,6 +14,8 @@ services:
     networks:
       - frontend
       - backend
+    environment:
+      - SITE_ADDRESS
 
   frontend:
     container_name: thradio_frontend
