--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "nuxt": "^2.14.12",
     "nuxt-clipboard": "^0.0.2",
     "nuxt-property-decorator": "^2.9.1",
+    "vue-plyr": "^7.0.0",
     "vuelidate": "^0.7.6",
     "vuelidate-property-decorators": "^1.0.28"
   },
