--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "core-js": "^3.8.3",
     "nuxt": "^2.14.12",
     "nuxt-clipboard": "^0.0.2",
+    "nuxt-i18n": "^6.20.1",
     "nuxt-property-decorator": "^2.9.1",
     "vue-plyr": "^7.0.0",
     "vuelidate": "^0.7.6",
