--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "nuxt-clipboard": "^0.0.2",
     "nuxt-i18n": "^6.20.1",
     "nuxt-property-decorator": "^2.9.1",
+    "semver": "^7.3.4",
     "vue-plyr": "^7.0.0",
     "vuelidate": "^0.7.6",
     "vuelidate-property-decorators": "^1.0.28"
@@ -31,6 +32,7 @@
     "@nuxtjs/eslint-config-typescript": "^5.0.0",
     "@nuxtjs/eslint-module": "^3.0.2",
     "@nuxtjs/vuetify": "^1.11.3",
+    "@types/semver": "^7.3.4",
     "@types/vuelidate": "^0.7.13",
     "babel-eslint": "^10.1.0",
     "eslint": "^7.18.0",
