--- a/docker-compose.dev.yaml
+++ b/docker-compose.dev.yaml
@@ -2,7 +2,7 @@ version: "3"
 
 services:
   frontend:
-    image: therhenals/thradio_frontend
+    image: therhenals/thradio_frontend:stable
     build: .
     ports:
       - 3000:3000
